# mkexp

./: .gitignore  .gitmodules  README.md  config  env.sh  init_experiment.sh  install.sh
clusters/: generic  horeka  init  unknown
data/: backtrace.gdb  graphs.csv
example/: .gitignore  Experiment  INFO
examples/: Default  KaMinPar  MtKaHyPar-SuperMUC  Streaming
experiments/: test
libs/: Sparsehash
parsers/: FREIGHT-Graph  HeiStream  Jet  KaGen-METIS  KaGen-ParMETIS  KaGen-XtraPuLP  KaGen-dKaMinPar  KaGen-pdKaMinPar  KaHIP  KaMPIngLP  KaMinPar  KaMinPar-ContractGraph  KaMinPar-Detailed  KaMinPar-ESA21  KaMinPar-GC  KaMinPar-HP  KaMinPar-NM  KaMinPar-Timings  KaMinParESA21  KaMinPar_FMBatches  KaMinPar_FM_Batches0  KaMinPar_FM_BatchesA  MaxClusterWeight  MtKaHIP  MtKaHyPar  MtKaHyPar-VerifyTool  MtMetis  MtMetis-Mem  ParHIP  ParMETIS  ParMETIS-Mem  XtraPuLP  dKaMinPar  dKaMinPar-HP  dbg-ShmRefinementBenchmark  dump  minKaMinPar  pFREIGHT-Graph  pHeiStream  pKaMinPar  (+2 more)
partitioner/: dKaMinPar  install_inmemory_driver.sh  install_kagen.sh  install_parhip.sh
partitioners/: FREIGHT-Graph  Generic  HeiStream  Jet  KaGen-METIS  KaGen-Metis  KaGen-MtMETIS  KaGen-MtMetis  KaGen-ParMETIS  KaGen-dKaMinPar  KaGen-pdKaMinPar  KaHIP  KaMPIngLP  KaMinPar  KaMinPar-ESA21  KaMinPar-RefinementBenchmark  KaMinParESA21  Metis  MtKaHIP  MtKaHyPar  MtKaHyParExt  MtMetis  MtMetis-Mem  ParHIP  ParMETIS  ParMETIS-Binary  XtraPuLP  _KaGenPartitioner  dKaMinPar  install_inmemory_driver.sh  (+9 more)
src/InMemoryDriver/: CMakeLists.txt  common.h  metrics.h  parhip.cpp  parmetis.cpp  xtrapulp.cpp
(+93 files in other folders)
